--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,30 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.postgresql:postgresql:42.7.4'
 
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// Lombok 추가
+	compileOnly 'org.projectlombok:lombok:1.18.30'
+	annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+	// Spring Boot Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// Spring Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// JWT 라이브러리 (jjwt)
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	runtimeOnly 'org.postgresql:postgresql:42.7.4'
+
+	// Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
+
 
 tasks.named('test') {
 	useJUnitPlatform()
