--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,17 @@ repositories {
 }
 
 dependencies {
-
+	// Spring Boot starters
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-	// Lombok 추가
-	compileOnly 'org.projectlombok:lombok:1.18.30'
-	annotationProcessor 'org.projectlombok:lombok:1.18.30'
-
-	// Spring Boot Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	runtimeOnly 'org.postgresql:postgresql:42.7.4'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+
+	// Lombok
+	compileOnly 'org.projectlombok:lombok:1.18.36'
+	annotationProcessor 'org.projectlombok:lombok:1.18.36'
+
 	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	// JWT 라이브러리 (jjwt)
@@ -34,12 +36,10 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-	runtimeOnly 'org.postgresql:postgresql:42.7.4'
-
-	// Validation
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-
+	// Testing dependencies
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.junit.jupiter:junit-jupiter'
+	testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
 }
 
 
